--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <section>
       <div class="container">
         <div class="loginform">
-          <img class=mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="Logo Boostrap" width="72" height="72"/>
+          <img src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="Logo Boostrap" />
           <h1 class="header">Please Sign In</h1>
-          <div class="inputform">
-            <input type="email" id="inputemail" class="loginform1" placeholder="Email address" />
-            <input type="password" id="inputpassword" class="loginform2" placeholder="Password" />
+          <div class="form">
+            <input type="email" id="inputemail" placeholder="Email address" />
+            <input type="password" id="inputpassword" placeholder="Password" />
+            <div class="checkbox">
+              <label> <input type="checkbox" value="remember-me" />Remember me </label>
+            </div>
+            <button class="button">Sign in</button>
           </div>
-          <div class="checkbox mb-3">
-            <label> <input type="checkbox" value="remember-me" class="rememberme" />Remember me </label>
+          <div class="copyright">
+            <p>&copy 2017-2018</p>
           </div>
-          <button class="button">Sign in</button>
-          <p class="footer">@2017-2018</p>
         </div>
       </div>
     </section>
